# ego-toolbox

./: .gitignore  AGENTS.md  README.md  fast_translate.py  pyproject.toml  translate_po.py
ego/: db.sqlite3  gunicorn_conf.py  restart.sh
ego/locale/en/LC_MESSAGES/: django.mo  django.po
ego/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
ego/mysite/: error_views.py  settings.py  urls.py  views.py
ego/mysite/templates/: base.html  login.html  register.html
ego/mysite/templates/errors/: 400.html  404.html  500.html
ego/toolbox/: admin.py  models.py  sitemaps.py  tests.py  urls.py
ego/toolbox/migrations/: 0002_feedback_tool.py
ego/toolbox/templates/: base.html  tool.html
ego/toolbox/templates/toolbox/: 400.html  404.html  500.html  base.html  index.html  removebg.html  todo.html  tool.html
ego/toolbox/views/: base64_converter.py  catalog.py  csv_json_converter.py  dino_game.py  error_views.py  excel_csv_converter.py  excel_merger.py  excel_splitter.py  feedback.py  index.py  json_formatter.py  ocr_tool.py  pages.py  qrcode_tool.py  removebg.py  timer.py  todo.py
ego/toolbox/views/core/: catalog.py  context.py  feedback.py  index.py  pages.py  routing.py
ego_toolbox/: db.sqlite3
ego_toolbox/locale/: README.md
ego_toolbox/mysite/: settings.py  urls.py
ego_toolbox/mysite/templates/: login.html  register.html
ego_toolbox/toolbox/: models.py  urls.py  views.py  views_bak.py
ego_toolbox/toolbox/migrations/: 0001_initial.py
ego_toolbox/toolbox/templates/: base.html
ego_toolbox/toolbox/views/: catalog.py  index.py  removebg.py  todo.py
(+106 files in other folders)
