[project]
name = "ego-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "django>=6.0.2",
    "django-htmx>=1.27.0",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "rembg[cpu]>=2.0.72",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
# 设置全局选项
line-length = 128 # 行长度限制
