[project]
name = "ego-toolbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "deep-translator>=1.11.4",
    "django>=6.0.2",
    "django-htmx>=1.27.0",
    "gunicorn>=25.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "polib>=1.2.0",
    "python-decouple>=3.8",
    "rembg[cpu]>=2.0.72",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
# 设置全局选项
line-length = 128 # 行长度限制
